# bot_sw

./: .env.example  .gitignore  alembic.ini  pyproject.toml  server.py
bot/decorators/: dec_for_kb.py
bot/filters/: is_admin.py
bot/keyboards/: main_menu.py
bot/routers/: users.py  users_router.py
bot/utils/: message_sender.py  messages.py  states.py
db/: models.py
db/migrations/: env.py
db/migrations/versions/: 3f56a365b96e_init_migrate.py  e9339e0def7b_add_role.py
db/requests/: filters_requests.py  user_requests.py
settings/: config.py
